--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -1,10 +1,45 @@
 <div>
     <h1> TODO LISTO PARA TRABAJAR CON WEBSOCKETS </h1>
-     <ul id="product-list"></ul>
+     <table>
+  <thead>
+    <tr>
+      <th>ID</th>
+      <th>Título</th>
+      <th>Descripción</th>
+      <th>Código</th>
+      <th>Precio</th>
+      <th>Stock</th>
+      <th>Categoría</th>
+        <th>Imágenes</th>
+      <th>Fecha de creación</th>
+    </tr>
+  </thead>
+  <tbody>
+
+    {{#each products}}
+      <tr>
+        <td>{{this.id}}</td>
+        <td>{{this.title}}</td>
+        <td>{{this.description}}</td>
+        <td>{{this.code}}</td>
+        <td>{{this.price}}</td>
+        <td>{{this.stock}}</td>
+        <td>{{this.category}}</td>
+        <td>
+          {{#each this.thumbnails}}
+            <img src="{{this}}" alt="Imagen de producto">
+          {{/each}}
+        </td>
+        <td>{{this.timestamp}}</td>
+        
+      </tr>
+    {{/each}}
+  </tbody>
+</table>
 
 </div>
 
 
 
-<script src="/socket.io/socket.io.js"></script>
-<script src="/js/index.js"></script>
+
+
