--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -19,19 +19,16 @@
     {{#each products}}
       <tr>
         <td>{{this.id}}</td>
-        <td>{{this.title}}</td>
+        <td>{{this.name}}</td>
         <td>{{this.description}}</td>
         <td>{{this.code}}</td>
         <td>{{this.price}}</td>
         <td>{{this.stock}}</td>
         <td>{{this.category}}</td>
         <td>
-          {{#each this.thumbnails}}
-            <img src="{{this}}" alt="Imagen de producto">
-          {{/each}}
+          <img src="{{this.imageUrl}}" alt="Imagen de producto">
         </td>
         <td>{{this.timestamp}}</td>
-        
       </tr>
     {{/each}}
   </tbody>
